<resources>
    <string name="app_name">Photos of Interest</string>
    <string name="title_feed">Feed</string>
    <string name="title_challenges">Challenges</string>
    <string name="title_scoreboard">Scoreboard</string>
    <string name="title_profile">Profile</string>

    <string name="button_ok">OK</string>

    <string name="placeholder">PLACEHOLDER</string>

    <plurals name="scoreboard_points">
        <item quantity="one">%d point</item>
        <item quantity="other">%d points</item>
    </plurals>

    <string name="current_leader">Current Leader</string>

    <!-- Auth -->
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_sign_out">Sign Out</string>
    <string name="auth_pending">Authenticating…</string>

    <string name="error_auth">The auth process was not successful: </string>
    <string name="error_other">An error occurred. Please try again later.</string>
    <string name="error_no_email">Please enter your email address</string>
    <string name="error_no_password">Please enter your password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_email_already_in_use">This email address is already associated with a different user account</string>
    <string name="error_password_too_short">This password is too short</string>
    <string name="error_incorrect_credentials">You provided incorrect user credentials</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user_not_available">This user account does not exist or has been disabled by an administrator</string>
    <string name="error_wrong_provider">This email address already has been used with a different provider</string>

    <string name="error_google_not_successful">The Google authentication was not successful</string>
    <string name="error_google_connection_failed">The connection to the Google servers was interrupted. Please try again later</string>

    <!-- Image Viewer -->
    <string name="image_cannot_load">Cannot load image</string>
    <string name="image_please_provide_title">Please provide a title</string>
    <string name="image_title_placeholder">Title</string>

    <!-- Feed -->
    <string name="feed_category_rising">Rising</string>
    <string name="feed_category_recent">Recent</string>
    <string name="feed_category_top">Top</string>
    <string name="feed_cannot_reload">Cannot fetch posts</string>

    <!-- Post -->
    <string name="post_created">Post was created</string>
    <string name="post_cannot_create">Post could not be created</string>
    <string name="post_cannot_reload">Cannot fetch posts</string>
    <string name="post_uploading">Uploading your photo…</string>

    <!-- Challenge Details -->
    <string name="challenge_category_details">Details</string>
    <string name="challenge_category_uploads">Uploads</string>
    <string name="points_of_interest">Points of Interest</string>
    <string name="description">Description</string>
    <plurals name="endsInHours">
        <item quantity="one">Ends in %d hour</item>
        <item quantity="other">Ends in %d hours</item>
    </plurals>
    <plurals name="endsInMinutes">
        <item quantity="one"> and %d minute</item>
        <item quantity="other"> and %d minutes</item>
    </plurals>

    <!-- challenge overview -->
    <string name="challenges_action_details">Details</string>
    <string name="challenges_action_uploads">Uploads</string>
    <string name="challenges_clock_desc">Clock icon</string>
    <string name="challenges_marker_desc">Marker icon</string>
    <string name="challenges_category_nearby">Nearby</string>
    <string name="challenges_category_ongoing">Ongoing</string>
    <string name="challenges_category_all">All</string>
    <string name="confirm_button">Confirm Button</string>
    <string name="back_button">Back Button</string>
    <string name="challenge_icon">Challenge Icon</string>
    <string name="location_icon">Location Icon</string>
    <string name="upvote_button">Upvote Button</string>
    <string name="downvote_button">downvote_button</string>
    <string name="votes_default">0</string>
    <string name="title">Title</string>
    <string name="challenge">Challenge</string>
    <string name="location">Location</string>
    <string name="score">Score:</string>
    <string name="expand">Expand</string>
    <string name="icon">Icon</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="already_voted">You already voted for that post!</string>
    <string name="voted">Voted!</string>

</resources>
