<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="300dp">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <!--<<<<<<< HEAD-->
        <!--<TextView-->
        <!--android:id="@+id/titleLabel"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/title"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="18sp" />-->

        <!--<android.support.constraint.ConstraintLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->

        <!--<ImageView-->
        <!--android:id="@+id/challengeIcon"-->
        <!--android:layout_width="16dp"-->
        <!--android:layout_height="16dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_weight="1"-->
        <!--android:contentDescription="@string/challenge_icon"-->
        <!--=======-->
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="80dp"
                    android:background="@android:color/background_dark"
                    android:src="@drawable/ic_person_black_24dp"
                    app:actualImageScaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"/>

            <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/userImage"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:layout_constraintBottom_toTopOf="@+id/image"
                    app:layout_constraintEnd_toStartOf="@+id/detailContainer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeholderImage="@drawable/ic_person_black_24dp"
                    app:roundAsCircle="true"/>

            <LinearLayout
                    android:id="@+id/detailContainer"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="80dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                <TextView
                        android:id="@+id/titleLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"/>

                <android.support.constraint.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:id="@+id/challengeIcon"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_photo_camera_black_24dp"/>

                    <TextView
                            android:id="@+id/challengeLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_weight="1"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/challengeIcon"
                            app:layout_constraintTop_toTopOf="parent"/>

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:id="@+id/locationIcon"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_location_marker_black_24dp"/>

                    <TextView
                            android:id="@+id/locationLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_weight="1"
                            android:textColor="@android:color/black"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/locationIcon"
                            app:layout_constraintTop_toTopOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="121dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/image"
                    app:layout_constraintTop_toBottomOf="@+id/detailContainer">

                <ImageView
                        android:id="@+id/upvoteButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/upvote"
                        app:srcCompat="@drawable/ic_arrow_up_white_24dp"/>

                <TextView
                        android:id="@+id/voteLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/downvoteButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/upvoteButton"/>

                <ImageView
                        android:id="@+id/downvoteButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:contentDescription="@string/downvote"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_arrow_down_white_24dp"/>

            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>